2010-09-08  Nico Weber  <thakis@chromium.org>

Reviewed by Kenneth Russell.

        chromium/mac: Fix crash with compositor due to missing current NSGraphicsContext
        https://bugs.webkit.org/show_bug.cgi?id=45354

        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::updateContents): Set a current local context.

git-svn-id: svn://svn.chromium.org/blink/trunk@66975 bbb929c8-8fbe-4397-9dbb-9b2b20218538